@@ -9586,7 +9586,7 @@ http://www.htdig.org/
 		      <em>version:</em>
 		  </dt>
 		  <dd>
-		      version: 3.2.0
+		      all
 		  </dd>
 		  <dt>
 			<em>description:</em>
@@ -9603,7 +9603,14 @@ http://www.htdig.org/
 		  </dt>
 		  <dd>
 			<table border="0">
-			  <tr> <td valign="top"><i>No example provided</i></td> </tr>
+			  <tr>
+				<td valign="top">
+				  version:
+				</td>
+				<td nowrap>
+				     3.2.0
+				</td>
+			  </tr>
 			</table>
 		  </dd>
 		</dl>
@@ -10390,6 +10397,6 @@ http://www.htdig.org/
 	<address>
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
-Last modified: Thu Feb 24 10:43:03 CST 2000
+Last modified: Thu Feb 24 11:06:39 CST 2000
   </body>
 </html>
